# GenAII-Apps

./: .env  pyproject.toml  student.db
ATS/: app.py
ATS_Modified/: app.py
Chat-with-Gemini/: app.py
Document_QA_with_Gemma/: app.py
HealthApp/: app.py
InvoiceExtractor/: app.py
NewsReporterAgent/: agents.py  crew.py  tasks.py  tools.py
Text-to-SQL/: app.py  sql.py
Vision-and-Image/: app.py  qachat.py  vision.py
YT-Transcriber/: app.py
YtBlogsCreatorAgent/: agents.py  crew.py  tasks.py  tools.py
faiss_index/: index.faiss  index.pkl
