[project]
name = "gemini-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.11",
    "crew[tools]>=0.9.2",
    "crewai>=0.121.1",
    "crewai-tools>=0.0.1",
    "faiss-cpu>=1.11.0",
    "google-cloud-aiplatform>=1.95.1",
    "google-generativeai>=0.8.5",
    "groq>=0.26.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.2",
    "pathlib>=1.0.1",
    "pdf2image>=1.17.0",
    "pypdf>=5.5.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "youtube-transcript-api>=1.0.3",
]
